--- a/recipes/coffee-slush.html
+++ b/recipes/coffee-slush.html
@@ -18,5 +18,35 @@
         <p>
             Save coffee from the day before in the fridge. Everyone will want your recipe!
         </p>
+
+        <h2>Ingredients</h2>
+            <ul>
+                <li>3 pints half-and-half cream</li>
+                <li>3 cups cold brewed coffee</li>
+                <li>2 cups white sugar</li>
+                <li>2 tablespoons vanilla extract</li>
+            </ul>
+        <h2>Steps</h2> 
+            <ol>
+                <li>
+                    <p>
+                        Mix cream, coffee, sugar, and vanilla extract together in a freezer-safe container. 
+                    </p>
+                    <p>
+                        Cover container and freeze until coffee mixture is solid, at least 3 hours.
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Remove container from freezer and defrost in room temperature for 1 hour.
+                    </p>
+                    <p>
+                        Break coffee mixture apart with a fork creating a slush-like consistency.
+                    </p>
+                    <p>
+                        Transfer to a punch bowl or large pitcher.
+                    </p>
+                </li>
+            </ol>
 </body>
 </html>
