--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/coffee_slush.html">Coffee Slush</a>
+    <a href="./recipes/coffee-slush.html">Coffee Slush</a>
 </body>
 </html>
