--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/coffee-slush.html">Coffee Slush</a>
-    <a href="./recipes/chicken.html">Air Fryer Apricot-Glazed Chicken Breasts</a>
+    <ul>
+        <li><a href="./recipes/coffee-slush.html">Coffee Slush</a></li>
+        <li><a href="./recipes/chicken.html">Air Fryer Apricot-Glazed Chicken Breasts</a></li>
+    </ul>
 </body>
 </html>
