--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="./recipes/coffee-slush.html">Coffee Slush</a></li>
         <li><a href="./recipes/chicken.html">Air Fryer Apricot-Glazed Chicken Breasts</a></li>
+        <li><a href="./recipes/waffles.html">Classic Waffles</a></li>
     </ul>
 </body>
 </html>
